#![recursion_limit="100"]
[package]
name = "node-package-packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
clap = { version = "4.5.10", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["blocking"] }
semver = "1.0.23"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }
