[package]
name = "daniel-package-packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.1"
clap = { version = "4.5.10", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.12.5" }
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["time","fs","rt-multi-thread","macros"] }
